#ifndef ENUMS_H
#define ENUMS_H

enum TipoJogador { AMADOR, PROFISSIONAL };
enum ModalidadeTorneio { MATA_MATA, PONTOS_CORRIDOS };

#endif // ENUMS_H
